# ConveyorBeltSimulator

./: ConveyorBeltSimulator.sln  README.md
ConveyorBeltSimulator/: ConveyorBelt.cpp  ConveyorBelt.h  ConveyorBeltSimulator.cpp  ConveyorBeltSimulator.h  ConveyorBeltSimulator.vcxproj  ConveyorBeltSimulator.vcxproj.filters  ConveyorBeltSystem.cpp  ConveyorBeltSystem.h  Luggage.cpp  MessageBroker.cpp  MessageBroker.h  MessageIdList.h  SimulationConfig.h
ConveyorBeltSimulator/msg/: Message.h  MsgLuggageChangingBelt.h
ConveyorBeltSimulator/src/: ConveyorBeltSimulator.cpp  ConveyorBeltSystem.cpp  Luggage.h  MessageBroker.cpp  MessageBroker.h  TimeCounter.cpp  TimeCounter.h
Linux/: CMakeLists.txt  README.md
Linux/include/: ConveyorBelt.h  ConveyorBeltSimulator.h  ConveyorBeltSystem.h  SimulationConfig.h
Linux/msg/: MessageIdList.h
Linux/src/: ConveyorBelt.cpp  ConveyorBeltSimulator.cpp  ConveyorBeltSystem.cpp  Luggage.cpp  main.cpp
